--- a/app.wxss
+++ b/app.wxss
@@ -1,10 +1,8 @@
 /**app.wxss**/
-.container {
-  height: 100%;
+.flexBox {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  padding: 200rpx 0;
-  box-sizing: border-box;
-} 
+}
+
+.flexItem {
+  flex: 1;
+}
