--- a/app.wxss
+++ b/app.wxss
@@ -1,4 +1,184 @@
 /**app.wxss**/
+
+
+page {
+  font-family: -apple-system, BlinkMacSystemFont, 'Helvetica Neue', Helvetica,
+    Segoe UI, Arial, Roboto, 'PingFang SC', 'Hiragino Sans GB', 'Microsoft Yahei',
+    sans-serif;
+    --color-gray-1: #999;
+    --color-gray-2: #888;
+    --color-gray-3: #666;
+   
+    --primary-color: #5CA3FD;
+    --page-bg-gray: #f2f2f2;
+    background: var(--page-bg-gray);
+    --button-primary-background-color: var(--primary-color);
+    --button-primary-border-color: var(--primary-color)
+}
+.ml-1 {
+  margin-left: 4px !important;
+}
+
+.ml-2 {
+  margin-left: 8px !important;
+}
+
+.ml-3 {
+  margin-left: 12px !important;
+}
+
+.ml-4 {
+  margin-left: 16px !important;
+}
+
+.ml-5 {
+  margin-left: 20px !important;
+}
+
+.mr-1 {
+  margin-right: 4px !important;
+}
+
+.mr-2 {
+  margin-right: 8px !important;
+}
+
+.mr-3 {
+  margin-right: 12px !important;
+}
+
+.mr-4 {
+  margin-right: 16px !important;
+}
+
+.mr-5 {
+  margin-right: 20px !important;
+}
+
+.mt-1 {
+  margin-top: 4px !important;
+}
+
+.mt-2 {
+  margin-top: 8px !important;
+}
+
+.mt-3 {
+  margin-top: 12px !important;
+}
+
+.mt-4 {
+  margin-top: 16px !important;
+}
+
+.mt-5 {
+  margin-top: 20px !important;
+}
+
+.mb-1 {
+  margin-bottom: 4px !important;
+}
+
+.mb-2 {
+  margin-bottom: 8px !important;
+}
+
+.mb-3 {
+  margin-bottom: 12px !important;
+}
+
+.mb-4 {
+  margin-bottom: 16px !important;
+}
+
+.mb-5 {
+  margin-bottom: 20px !important;
+}
+
+.ma-1 {
+  margin: 4px !important;
+}
+
+.ma-2 {
+  margin: 8px !important;
+}
+
+.ma-3 {
+  margin: 12px !important;
+}
+
+.ma-4 {
+  margin: 16px !important;
+}
+
+.ma-5 {
+  margin: 20px !important;
+}
+
+.pa-1 {
+  padding: 4px !important;
+}
+
+.pa-2 {
+  padding: 8px !important;
+}
+
+.pa-3 {
+  padding: 12px !important;
+}
+
+.pa-4 {
+  padding: 16px !important;
+}
+
+.pa-5 {
+  padding: 20px !important;
+}
+
+.pl-1 {
+  padding-left: 4px !important;
+}
+
+.pl-2 {
+  padding-left: 8px !important;
+}
+
+.pl-3 {
+  padding-left: 12px !important;
+}
+
+.pl-4 {
+  padding-left: 16px !important;
+}
+
+.pl-5 {
+  padding-left: 20px !important;
+}
+
+.pr-1 {
+  padding-right: 4px !important;
+}
+
+.pr-2 {
+  padding-right: 8px !important;
+}
+
+.pr-3 {
+  padding-right: 12px !important;
+}
+
+.pr-4 {
+  padding-right: 16px !important;
+}
+
+.pr-5 {
+  padding-right: 20px !important;
+}
+
+.text-center {
+  text-align: center;
+}
+
 .flexBox {
   display: flex;
 }
